--- a/style.css
+++ b/style.css
@@ -80,3 +80,40 @@ button:hover {
     border: 1px solid #444;
     color: #e0e0e0;
 }
+#operaciones {
+    background: #1e1e1e;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.6);
+    margin: 10px auto;
+    max-width: 600px;
+    text-align: center;
+}
+
+.operacion {
+    margin-top: 10px;
+}
+
+#resultado {
+    background: #1e1e1e;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.6);
+}
+
+#resultMatrix input {
+    width: 50px;
+    margin: 3px;
+    padding: 5px;
+    text-align: center;
+    border: none;
+    background: #2c2c2c;
+    color: #bb86fc;
+}
+
+#resultMatrix .matrix-row {
+    display: flex;
+    justify-content: center;
+}
+
