--- a/style.css
+++ b/style.css
@@ -116,4 +116,18 @@ button:hover {
     display: flex;
     justify-content: center;
 }
+label {
+    font-weight: bold;
+    color: #e0e0e0;
+}
+
+@media (max-width: 600px) {
+    #controles, #matrices {
+        flex-direction: column;
+        align-items: center;
+    }
+    button {
+        width: 100%;
+    }
+}
 
